# convert

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  package.xml
cmake/: cmake_uninstall.cmake.in  config.cmake.in  convert-config.cmake.in
convert/: CMakeLists.txt  Doxyfile.in  README.md  package.xml
convert/cmake/: config.cmake.in  setup.cmake
convert/include/convert/: convert.hpp  convert_helpers.hpp
convert/include/convert/eigen_matlab/: eigen_matlab.hpp
convert/include/convert/eigen_matlab/impl/: eigen_matlab.hpp
convert/include/convert/eigen_ros/: geometry_msgs.hpp
convert/include/convert/eigen_ros/impl/: eigen_ros.hpp
convert/include/convert/eigen_std/: eigen_std.hpp
convert/include/convert/eigen_std/impl/: eigen_std.hpp
convert/include/convert/gtsam_ros/: geometry_geometry_msgs.hpp  gtsam_ros.hpp  navigation_nav_msgs.hpp
convert/include/convert/impl/: convert_helpers.hpp
convert/include/convert/matlab_std/: matlab_std.hpp
convert/include/convert/matlab_std/impl/: matlab_std.hpp
convert/include/convert/ros/: geometry_msgs_nav_msgs.hpp
convert/include/convert/ros/impl/: rostime.hpp  std_msgs.hpp
convert/include/convert/sensorbox_ros/: pose.hpp
convert/src/eigen_gtsam/: navigation.cpp
convert/src/gtsam_ros/: navigation_nav_msgs.cpp
convert/src/ros/: geometry_msgs_nav_msgs.cpp  nav_msgs.cpp
convert/src/sensorbox_ros/: imu.cpp  pose.cpp  pose_twist.cpp
convert/test/: CMakeLists.txt
convert/test/include/convert/test/: geometry_msgs.hpp  helpers.hpp
convert/test/include/convert/test/impl/: instances.hpp
convert/test/src/eigen_ros/: geometry_msgs.cpp
convert/test/src/manif_ros/: geometry_msgs.cpp
convert/test/src/ros/: rostime.cpp
convert/test/src/sensorbox_ros/: imu.cpp
convert_catkin/: CMakeLists.txt  README.md  package.xml
convert_catkin/cmake/: cfg_extras.cmake.in
include/convert/: convert.hpp  convert_helpers.hpp
include/convert/eigen/: eigen.hpp  geometry.hpp
include/convert/eigen/impl/: geometry.hpp
include/convert/eigen_foxglove/: eigen_foxglove.hpp
include/convert/eigen_foxglove/impl/: eigen_foxglove.hpp  eigen_foxglove.impl.hpp
include/convert/eigen_gtsam/: eigen_gtsam.hpp  geometry.hpp  navigation.hpp
include/convert/eigen_gtsam/impl/: geometry.hpp  geometry.impl.hpp  navigation.hpp  navigation.impl.hpp
include/convert/eigen_json/: eigen_json.hpp
include/convert/eigen_json/impl/: eigen_json.hpp
include/convert/eigen_matlab/impl/: eigen_matlab.hpp
include/convert/eigen_nlohmann_json/: eigen_nlohmann_json.hpp
include/convert/eigen_nlohmann_json/impl/: eigen_nlohmann_json.hpp
include/convert/eigen_ros/: eigen_ros.hpp  geometry_msgs.hpp  std_msgs.hpp
include/convert/eigen_ros/impl/: eigen_ros.hpp  geometry_msgs.hpp  geometry_msgs.impl.hpp  std_msgs.hpp
include/convert/eigen_std/: eigen_std.hpp
include/convert/eigen_std/impl/: eigen_std.hpp
include/convert/foxglove_std/: foxglove_std.hpp
include/convert/foxglove_std/impl/: foxglove_std.hpp  foxglove_std.impl.hpp
include/convert/gtsam_ros/: geometry_geometry_msgs.hpp  navigation_nav_msgs.hpp
include/convert/gtsam_ros/impl/: geometry_geometry_msgs.hpp  geometry_geometry_msgs.impl.hpp  navigation_nav_msgs.hpp  navigation_nav_msgs.impl.hpp
include/convert/impl/: convert.hpp  convert_helpers.hpp
include/convert/manif_json/: manif_json.hpp
include/convert/manif_json/impl/: manif_json.hpp
include/convert/manif_nlohmann_json/: manif_nlohmann_json.hpp
include/convert/manif_nlohmann_json/impl/: manif_nlohmann_json.hpp
include/convert/manif_ros/: geometry_msgs.hpp  manif_ros.hpp
include/convert/manif_ros/impl/: geometry_msgs.hpp  geometry_msgs.impl.hpp
include/convert/matlab_std/: matlab_std.hpp
include/convert/matlab_std/impl/: matlab_std.hpp
include/convert/ros/: geometry_msgs_nav_msgs.hpp  nav_msgs.hpp  ros.hpp  rostime.hpp  std_msgs.hpp
include/convert/ros/impl/: geometry_msgs_nav_msgs.hpp  geometry_msgs_nav_msgs.impl.hpp  nav_msgs.hpp  nav_msgs.impl.hpp  rostime.hpp  std_msgs.hpp
include/convert/sensorbox_ros/: imu.hpp  pose_twist.hpp  sensorbox_ros.hpp
src/eigen/: geometry.cpp
src/eigen_foxglove/: eigen_foxglove.cpp
src/eigen_gtsam/: geometry.cpp  navigation.cpp
src/eigen_ros/: geometry_msgs.cpp
src/eigen_std/: eigen_std.cpp
src/foxglove_std/: foxglove_std.cpp
src/gtsam_ros/: geometry_geometry_msgs.cpp  navigation_nav_msgs.cpp
src/manif_ros/: geometry_msgs.cpp
src/matlab_std/: matlab_std.cpp
src/ros/: geometry_msgs_nav_msgs.cpp  nav_msgs.cpp  rostime.cpp  std_msgs.cpp
src/sensorbox_ros/: imu.cpp
test/: CMakeLists.txt
test/include/convert/test/: instances.hpp
test/include/convert/test/impl/: geometry_msgs.hpp  helpers.hpp  instances.hpp
test/src/eigen_json/: eigen_json.cpp
test/src/eigen_nlohmann_json/: eigen_nlohmann_json.cpp
test/src/eigen_ros/: geometry_msgs.cpp
test/src/eigen_std/: eigen_std.cpp
test/src/manif_json/: manif_json.cpp
test/src/manif_nlohmann_json/: manif_nlohmann_json.cpp
test/src/manif_ros/: geometry_msgs.cpp
test/src/ros/: rostime.cpp  std_msgs.cpp
test/src/sensorbox_ros/: imu.cpp
